PROJECT (Example)

IF(NOT VTK_BINARY_DIR)
FIND_PACKAGE(VTK REQUIRED)

INCLUDE(${VTK_USE_FILE})
ENDIF()

ADD_EXECUTABLE(animstb2 animstb2.cxx)
TARGET_LINK_LIBRARIES(animstb2 ${VTK_LIBRARIES})

ADD_EXECUTABLE(worm2 worm2.cxx)
TARGET_LINK_LIBRARIES(worm2 ${VTK_LIBRARIES})

ADD_EXECUTABLE(hanoi hanoi.cxx)
TARGET_LINK_LIBRARIES(hanoi ${VTK_LIBRARIES})